welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: value ++ is not a member of Int
    nbPas++
         ^